# midi_lstm

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.0-jame-download-dataset.ipynb  2.0-jame-train-rnn.ipynb  generated.mid  mlflow.db
songs_generator_using_lstm/: __init__.py  dataset.py  features.py  plots.py
songs_generator_using_lstm/modeling/: predict.py  train.py
